# Covek-samo-srcem-dobro-vidi

./: .gitignore
Covek-samo-srcem-dobro-vidi/: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Dockerfile  ImageFormats.h  colorfilter.cpp  colorfilter.h  conanfile.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  metadata.cpp  metadata.h
build-Covek-samo-srcem-dobro-vidi-Desktop_Qt_6_6_1_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Covek-samo-srcem-dobro-vidi  build.ninja  cmake_install.cmake
build-Covek-samo-srcem-dobro-vidi-Desktop_Qt_6_6_1_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-974f4edec109bfad3240.json  cmakeFiles-v1-da99018f8293e95067d4.json  codemodel-v2-5c4b69407397c9c59072.json  directory-.-Debug-99d237fafe740933653e.json  index-2024-07-18T15-05-59-0517.json  target-Covek-samo-srcem-dobro-vidi-Debug-c1e939e4bee4a2d7ab3e.json  target-Covek-samo-srcem-dobro-vidi_autogen_timestamp_deps-Debug-3cc3e44d03b31f2233a4.json
build-Covek-samo-srcem-dobro-vidi-Desktop_Qt_6_6_1_GCC_64bit-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-8d3560cdb8496d9129d1.json  codemodel-v2-d5c1ea0f0ddcb1929a24.json  directory-.-Debug-f816a64bd0e2c31eefae.json  index-2024-07-18T12-08-12-0760.json  target-Covek-samo-srcem-dobro-vidi-Debug-791ee57da3282e6bb4e6.json  target-Covek-samo-srcem-dobro-vidi_autogen-Debug-6812a8e9cbd51630399b.json
build-Covek-samo-srcem-dobro-vidi-Desktop_Qt_6_6_1_GCC_64bit-Debug/.qt/: QtDeploySupport.cmake
build-Covek-samo-srcem-dobro-vidi-Desktop_Qt_6_6_1_GCC_64bit-Debug/Covek-samo-srcem-dobro-vidi_autogen/: deps
build-Covek-samo-srcem-dobro-vidi-Desktop_Qt_6_6_1_GCC_64bit-Debug/Covek-samo-srcem-dobro-vidi_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-Covek-samo-srcem-dobro-vidi-Desktop_Qt_6_6_1_GCC_64bit-Debug/Covek-samo-srcem-dobro-vidi_autogen/include/: ui_mainwindow.h
